# SuiSwarm-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
docs/: ARCHITECTURE.md  REFACTORING_PLAN.md  index.md
docs/huong-dan/: cau-hinh.md  kiem-thu.md  them-llm-provider.md  them-sub-agent.md  them-tool.md  trien-khai.md
docs/kien-truc/: tong-quan.md
docs/kien-truc/adr/: 0001-ghi-nhan-quyet-dinh-kien-truc.md  0002-kien-truc-phan-lop.md  0003-swarm-supervisor-subagent.md  0004-sui-qua-service-nestjs.md  0005-quyen-agent-va-policy-contract.md
src/suiswarm_agent/: __init__.py  __main__.py  cli.py  graph.py  llm.py  observability.py  prompts.py  schemas.py  settings.py  state.py  tools.py
src/suiswarm_agent/agent/: __init__.py  graph.py  prompts.py  state.py  supervisor.py
src/suiswarm_agent/agent/agents/: __init__.py  base.py  market.py  research.py  sui_onchain.py
src/suiswarm_agent/config/: __init__.py  settings.py
src/suiswarm_agent/core/: __init__.py  constants.py  exceptions.py  logging.py
src/suiswarm_agent/graph/: __init__.py  builder.py  nodes.py
src/suiswarm_agent/infra/: __init__.py
src/suiswarm_agent/infra/http/: __init__.py  client.py
src/suiswarm_agent/infra/observability/: __init__.py  langfuse.py
src/suiswarm_agent/interfaces/: __init__.py
src/suiswarm_agent/interfaces/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
src/suiswarm_agent/interfaces/cli/: __init__.py  app.py  render.py
src/suiswarm_agent/llm/: __init__.py  factory.py
src/suiswarm_agent/memory/: __init__.py  checkpoint.py
src/suiswarm_agent/tools/: __init__.py  base.py  builtin.py  coingecko.py  registry.py  search.py
src/suiswarm_agent/tools/market/: __init__.py
src/suiswarm_agent/tools/market/coingecko/: __init__.py  client.py  models.py  service.py  tools.py
src/suiswarm_agent/tools/market/geckoterminal/: __init__.py  service.py  tools.py
src/suiswarm_agent/tools/sui/: __init__.py  client.py  service.py  tools.py
src/suiswarm_agent/tools/system/: __init__.py  builtin.py
src/suiswarm_agent/tools/web/: __init__.py  search.py
tests/: conftest.py  test_cli_memory.py  test_graph_setup.py  test_settings.py
tests/integration/: test_graph.py
tests/unit/: test_coingecko_service.py  test_geckoterminal_service.py  test_http_client.py  test_llm_factory.py  test_registry.py  test_settings.py  test_sui.py
