[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suiswarm-agent"
version = "0.1.0"
description = "AI agent project built with LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
  "langchain-core>=0.3.28",
  "langchain-openai>=0.2.14",
  "langchain-tavily>=0.1.0",
  "langfuse>=3.0.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.7.0",
  "typer>=0.15.1",
  "rich>=13.9.4"
]

[project.scripts]
suiswarm = "suiswarm_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
