[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suiswarm-agent"
version = "0.2.0"
description = "Sui-first multi-agent swarm (LangGraph) with a supervisor over specialized sub-agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SuiSwarm" }]
dependencies = [
  "langgraph>=1.1,<2",
  "langgraph-supervisor>=0.0.31,<0.1",
  "langgraph-checkpoint-sqlite>=3.1,<4",
  "langchain>=1.2,<2",
  "langchain-core>=1.3,<2",
  "langchain-openai>=1.1,<2",
  "langchain-tavily>=0.2,<0.3",
  "langfuse>=4.5,<5",
  "fastapi>=0.136,<1",
  "uvicorn[standard]>=0.46,<1",
  "httpx>=0.28,<0.29",
  "tenacity>=9,<10",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1,<2",
  "typer>=0.26,<1",
  "rich>=14,<15",
  "openai>=2,<3",
  "typing-extensions>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24",
  "respx>=0.21,<1",
  "ruff>=0.15,<1",
  "mypy>=1.18,<2",
  "coverage>=7,<8",
]

[project.scripts]
suiswarm = "suiswarm_agent.interfaces.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
suiswarm_agent = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
  "B008",   # function call in default arg — common & safe with typer/fastapi Depends
  "RUF001", # ambiguous unicode in strings — Vietnamese docstrings/messages
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

# ---------------------------------------------------------------------------
# mypy (type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
packages = ["suiswarm_agent"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party libraries that ship no type stubs.
module = [
  "langgraph.*",
  "langgraph_supervisor.*",
  "langchain.*",
  "langchain_core.*",
  "langchain_openai.*",
  "langchain_tavily.*",
  "langfuse.*",
  "dotenv.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
  "e2e: end-to-end tests that hit real external APIs (skipped by default in CI)",
]
filterwarnings = [
  # langgraph-supervisor still calls the deprecated create_react_agent internally.
  "ignore:.*create_react_agent has been moved.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/suiswarm_agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
